# 3D_trees

./: CMakeLists.txt  README.md  READ_ME.md  lidar_to_coordinates.py  main.cpp  tree_coordinates_ejemplo.csv
calibs/: calib_cam_to_camera_0.txt  calib_lidar_0_to_camera_0.txt  calib_lidar_0_to_gnss.txt
include/: BasicLidarInCamera.hpp  BinaryPcd.hpp  Sync.hpp
resultados/ejemplo/centroides/: 00000.txt  00001.txt  00002.txt  00003.txt  00004.txt  00005.txt
resultados/ejemplo/nubes_coloreadas/: 00000_coloreada.pcd  00001_coloreada.pcd  00002_coloreada.pcd  00003_coloreada.pcd  00004_coloreada.pcd  00005_coloreada.pcd
src/: BasicLidarInCamera.cpp  BinaryPcd.cpp  Sync.cpp
test_sincro/data/annotations/: 00000.txt  00001.txt  00002.txt  00003.txt  00004.txt  00005.txt
test_sincro/data/gnss/fix/: .~lock.00000.csv#  00000.csv  00004.csv  00005.csv
test_sincro/data/gnss/imu/: 00000.csv  00001.csv  00002.csv  00003.csv  00004.csv  00005.csv
test_sincro/data/gnss/utm/: 00001.csv  00004.csv  00005.csv
